working on Read Me

--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": "dad8710",
+    "password": "zane123",
     "database": "onTap_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "dad8710",
+    "password": "zane123",
     "database": "onTap_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "dad8710",
+    "password": "zane123",
     "database": "onTap_db",
     "host": "localhost",
     "dialect": "mysql"
