trying to initialize Heroku

--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "dad8710",
-    "database": "onTap_db",
-    "host": "localhost",
+    "username": "ikn29d7nnqf1j2sq",
+    "password": "wg063hdtdjq7wjx7",
+    "database": "hn9sfgv5p19t7cgb",
+    "host": "y5s2h87f6ur56vae.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
